--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,48 +13,45 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
-    "expo-device": "~8.0.8",
-    "expo-router": "~6.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-camera": "~17.0.10",
+    "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
+    "@expo/vector-icons": "^15.0.3",
+    "expo": "~54.0.30",
+    "expo-checkbox": "~5.0.8",
+    "expo-font": "~14.0.10",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linking": "~8.0.11",
+    "expo-notifications": "~0.32.15",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.0",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/react-native-action-sheet": "^4.1.1",
-    "@expo/vector-icons": "^15.0.2",
     "@firebase/auth-compat": "^0.6.0",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.84.1",
-    "@types/react": "~19.1.10",
     "cpf-cnpj-validator": "^1.0.3",
-    "expo": "54.0.3",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-checkbox": "~5.0.7",
-    "expo-font": "~14.0.8",
-    "expo-image": "^3.0.8",
-    "expo-image-picker": "~17.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-notifications": "~0.32.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.11",
-    "i": "^0.3.7",
     "moment": "^2.30.1",
-    "npm": "^11.3.0",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.3",
-    "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-onboard": "^2.6.0",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~4.1.0",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -62,18 +59,22 @@
     "react-native-web": "^0.21.0",
     "react-use-wizard": "^2.3.0",
     "sweetalert2": "^11.22.2",
-    "typescript": "~5.9.2",
     "yup": "^1.6.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "jest-expo": "~54.0.12",
+    "jest-expo": "~54.0.16",
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
     "jest": "^29.2.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "expo-image-loader": "6.0.0"
+    }
   },
   "private": true
 }
